//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String [not null]
  username String [unique, not null]
  email String [unique, not null]
  password String [not null]
  imageUrl String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  groups GroupMember [not null]
  goals Goal [not null]
  groupsOwned Group [not null]
  goalsCreatedByMe Goal [not null]
  achievements Achievement [not null]
  sendedInvites Invite [not null]
  receivedInvites Invite [not null]
  favoritedGroups Group [not null]
  goalsFavoritedBy Goal [not null]
}

Table Group {
  id String [pk]
  name String [not null]
  description String [not null]
  ownerId String [not null]
  isPrivate Boolean [not null, default: false]
  password String
  imageUrl String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  owner User [not null]
  members GroupMember [not null]
  goals Goal [not null]
  achievements Achievement [not null]
  sendedGroupInvites Invite [not null]
  receivedGroupInvites Invite [not null]
  categories GroupCategory [not null]
  favoritedBy User [not null]
}

Table Goal {
  id String [pk]
  groupId String [not null]
  createdById String [not null]
  title String [not null]
  description String [not null]
  categoryId Int [not null]
  target Int [not null]
  progress Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  type GoalType [not null]
  recurrence Recurrence
  frequency Int
  startDate DateTime [default: `now()`]
  endDate DateTime
  createdBy User [not null]
  group Group [not null]
  achievements Achievement [not null]
  users User [not null]
  favoritedBy User [not null]
  invitesSent Invite [not null]
  invitesReceived Invite [not null]
  category Category [not null]
}

Table Achievement {
  id String [pk]
  userId String [not null]
  groupId String [not null]
  goalId String [not null]
  title String [not null]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  user User [not null]
  groups Group [not null]
  goal Goal [not null]
}

Table GroupMember {
  id String [pk]
  groupId String [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  group Group [not null]
  user User [not null]
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  imageUrl String
  groups GroupCategory [not null]
  goals Goal [not null]
}

Table GroupCategory {
  id Int [pk, increment]
  groupId String [not null]
  categoryId Int [not null]
  group Group [not null]
  category Category [not null]
}

Table Invite {
  id String [pk]
  type InviteType [not null]
  status InviteStatus [not null]
  senderId String [not null]
  receiverId String [not null]
  senderGroupId String
  receiverGroupId String
  senderGoalId String
  receiverGoalId String
  expiration DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  sender User
  receiver User
  senderGroup Group
  receiverGroup Group
  senderGoal Goal
  receiverGoal Goal
}

Enum GoalType {
  ONCE
  RECURRING
}

Enum Recurrence {
  DAILY
  WEEKLY
  MONTHLY
}

Enum InviteType {
  FRIENDSHIP
  GROUP_REQUEST
  GROUP_INVITATION
  GOAL_REQUEST
  GOAL_INVITATION
}

Enum InviteStatus {
  ACTIVE
  INACTIVE
  EXPIRED
}

Ref: Group.ownerId > User.id

Ref: Goal.createdById > User.id

Ref: Goal.groupId > Group.id

Ref: Goal.categoryId > Category.id

Ref: Achievement.userId > User.id

Ref: Achievement.goalId > Goal.id

Ref: GroupMember.groupId > Group.id

Ref: GroupMember.userId > User.id

Ref: GroupCategory.groupId > Group.id

Ref: GroupCategory.categoryId > Category.id

Ref: Invite.senderId > User.id

Ref: Invite.receiverId > User.id

Ref: Invite.senderGroupId > Group.id

Ref: Invite.receiverGroupId > Group.id

Ref: Invite.senderGoalId > Goal.id

Ref: Invite.receiverGoalId > Goal.id